--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -63,13 +63,12 @@
   font-weight: bold;
 }
 </style>
-<title>Title</title>
+<title>ELIXIR UK milestones made by Khaled Jumah on behalf of Potworloicz team. </title>
 </head>
 
 <body>
 
-# ELIXIR UK milestones made by Khaled Jumah on behalf of Potworloicz team. 
-
+s
 
 
 
