--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Khaled" />
+<meta name="author" content="Khaled, Krzysztof" />
 
 <meta name="date" content="2022-11-04" />
 
@@ -365,30 +365,21 @@ pre code {
 
 <h1 class="title toc-ignore">ELIXIR UK milestones made by Khaled Jumah
 on behalf of Potworloicz team.</h1>
-<h4 class="author">Khaled</h4>
+<h4 class="author">Khaled, Krzysztof</h4>
 <h4 class="date">11/04/2022</h4>
 
 </div>
 
 
-<div id="elixir-uk-milestones-for-implementation-resurch." class="section level1">
-<h1>Elixir UK Milestones for Implementation resurch.</h1>
-<p>This part will illustrate the commitment of the elixir UK milestone
-and deliverables for Elixir Implementation studies.</p>
-<p>We have seen That the Elixir CNV community is interested in wrapping
-CNV bioinformatics tools on the galaxy and containerise them into conda.
-Also, they are interested in comparing between multiple CNVs tools in
-terms of the accuracy and the infrastructure required to run those
-tools.</p>
-<p>So we came up with three approaches to address these
-requirements:</p>
-<div id="create-documentation-to-include-how-to-wrap-copy-number-variant-detecting-tools-into-galaxy-and-bioconda." class="section level2">
-<h2>Create documentation to include how to wrap Copy number variant
-detecting tools into Galaxy and Bioconda.</h2>
-<p>With the availability of multiple tools for Copy number variants
-detection on Galaxy, still, some of them are not available, so we will
-create documentation to show the process of wrapping the tools into
-Bioconda and then to Galaxy by:</p>
+<div id="elixir-uk-milestones-for-implementation-srudes." class="section level1">
+<h1>Elixir UK Milestones for Implementation srudes.</h1>
+<div id="create-documentation-to-guide-the-resurchers-to-wrap-copy-number-variant-cnv-detecting-tools-into-galaxy-and-bioconda." class="section level2">
+<h2>1. Create documentation to guide the resurchers to wrap Copy number
+variant (CNV) detecting tools into Galaxy and Bioconda.</h2>
+<p>With the availability of multiple tools for CNV detection on Galaxy,
+still, some of them are not available, so we will create documentation
+to show the process of wrapping the tools into Bioconda and then to
+Galaxy by:</p>
 <ol style="list-style-type: decimal">
 <li>Locate the available tutorials on how to wrap a tool into
 Bioconda</li>
@@ -418,9 +409,9 @@ information on planemo] (<a href="https://planemo.readthedocs.io/en/latest/" cla
 user to wrap his CNV tool into Galaxy.</li>
 </ol>
 </div>
-<div id="variant-tools-for-cnv-with-different-outcomes-and-infrastructure-requirements." class="section level2">
-<h2>Variant tools for CNV with different outcomes and infrastructure
-requirements.</h2>
+<div id="the-cnv-tools-are-different-from-each-other-in-the-outcomes-and-infrastructure-requirements." class="section level2">
+<h2>2. The CNV tools are different from each other in the outcomes and
+infrastructure requirements.</h2>
 <p>Choosing a specific tool to carry on the analysis can be considered
 on the accuracy of CNVs detection, analysis time and the required
 infrastructure. Even though Galaxy shows the time for the analysis,
@@ -462,7 +453,8 @@ exome sequencing data</p>
 <td>Control-FREEC</td>
 <td><a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S11-S1#ref-CR53">1</a></td>
 <td><a href="http://bioinfo-out.curie.fr/projects/freec/">1</a></td>
-<td>Yes</td>
+<td><a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories?f-free-text-search=Control-FREEC&amp;sort=name&amp;operation=view_or_manage_repository&amp;id=fafcb3ceb9215f19">Yes</a>
+/ <a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories_by_user?user_id=b563abc230aa8fd0">owner</a></td>
 </tr>
 <tr class="even">
 <td>CoNIFER</td>
@@ -486,7 +478,8 @@ exome sequencing data</p>
 <td>CONTRA</td>
 <td><a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S11-S1#ref-CR77">5</a></td>
 <td><a href="http://contra-cnv.sourceforge.net/">5</a></td>
-<td>Yes</td>
+<td><a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories?f-free-text-search=CONTRA&amp;sort=name&amp;operation=view_or_manage_repository&amp;id=5ed52e96157e1d8b">Yes</a>
+/ <a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories_by_user?user_id=fa71383023bd0c81">owner</a></td>
 </tr>
 <tr class="even">
 <td>CONDEX</td>
@@ -510,7 +503,11 @@ exome sequencing data</p>
 <td>VarScan2</td>
 <td><a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S11-S1#ref-CR50">9</a></td>
 <td><a href="http://genome.wustl.edu/software/varscan">9</a></td>
-<td>Yes</td>
+<td><a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories?f-free-text-search=VarScan2&amp;sort=name&amp;operation=view_or_manage_repository&amp;id=2a3dbf8c5c7d05b5">Yes</a>
+/ <a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories?f-free-text-search=VarScan2&amp;sort=name&amp;operation=view_or_manage_repository&amp;id=885b054013c7d7ba">alternative</a>
+/ <a href="https://toolshed.g2.bx.psu.edu/repository/view_repository?sort=name&amp;operation=view_or_manage_repository&amp;id=af4ecd84770259cd">alternative
+2</a> /<a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories_by_user?user_id=5487164d09c88395">owner1/2</a>
+/ <a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories_by_user?user_id=fa71383023bd0c81">owner2</a></td>
 </tr>
 <tr class="even">
 <td>ExoCNVTest</td>
@@ -522,7 +519,8 @@ exome sequencing data</p>
 <td>ExomeDepth</td>
 <td><a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S11-S1#ref-CR30">11</a></td>
 <td><a href="http://cran.r-project.org/web/packages/ExomeDepth/index.html">11</a></td>
-<td>Yes</td>
+<td><a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories?f-free-text-search=ExomeDepth&amp;sort=name&amp;operation=view_or_manage_repository&amp;id=7dc050469e4bd1bb">Yes</a>
+/ <a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories_by_user?user_id=63e16d726d394a5e">Owner</a></td>
 </tr>
 <tr class="even">
 <td>XCAVATOR</td>
@@ -539,8 +537,8 @@ exome sequencing data</p>
 </tbody>
 </table>
 </div>
-<div id="same-preprocess-different-cnv-tool-wes" class="section level2">
-<h2>Same preprocess different CNV tool (WES)</h2>
+<div id="same-preprocess-different-cnv-tool-wes-tutorial." class="section level2">
+<h2>Same preprocess different CNV tool (WES) tutorial.</h2>
 <p>Usually, the CNVs workflows share the same process to prepare the
 data from the quality control to the mapping step. The changes occur in
 the CNVs detection step, so we will work to create a tutorial that
