--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -506,7 +506,7 @@ exome sequencing data</p>
 <td><a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories?f-free-text-search=VarScan2&amp;sort=name&amp;operation=view_or_manage_repository&amp;id=2a3dbf8c5c7d05b5">Yes</a>
 / <a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories?f-free-text-search=VarScan2&amp;sort=name&amp;operation=view_or_manage_repository&amp;id=885b054013c7d7ba">alternative</a>
 / <a href="https://toolshed.g2.bx.psu.edu/repository/view_repository?sort=name&amp;operation=view_or_manage_repository&amp;id=af4ecd84770259cd">alternative
-2</a> /<a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories_by_user?user_id=5487164d09c88395">owner1/2</a>
+2</a> /<a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories_by_user?user_id=5487164d09c88395">owner1-2</a>
 / <a href="https://toolshed.g2.bx.psu.edu/repository/browse_repositories_by_user?user_id=fa71383023bd0c81">owner2</a></td>
 </tr>
 <tr class="even">
