--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -549,13 +549,14 @@ to proceed with his analysis.</p>
 <ol style="list-style-type: decimal">
 <li><p>View the input requirements for some of the available CNVs
 tools.</p></li>
-<li><p>Create a shared preparing workflow for analyzing data.</p></li>
-<li><p>Make the tutorial that requires the longest preprocessing and
-indicate to be used as the main tutorial and locate the parts where the
-data are ready to continue with different CNV tools.</p></li>
-<li><p>Provide links for additional reading to guide the user on how he
-uses his tool if it is not included in the workflow</p></li>
-<li><p>Locate most of the CNV detecting tools available on/outside
+<li><p>Create a shared prepossessing workflow for different tools
+data.</p></li>
+<li><p>Make the tool that requires the longest prepossessing as the main
+tool in the tutorial and locate the sections where we can introduce the
+different CBV tools for the data.</p></li>
+<li><p>add links for additional reading to provide the user with further
+knowledge on how to use a specific CNV tool</p></li>
+<li><p>Locate most of the CNV detecting tools available in/outside
 galaxy</p></li>
 </ol>
 </div>
