--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -376,17 +376,17 @@ on behalf of Potworloicz team.</h1>
 <div id="create-documentation-to-guide-the-resurchers-to-wrap-copy-number-variant-cnv-detecting-tools-into-galaxy-and-bioconda." class="section level2">
 <h2>1. Create documentation to guide the resurchers to wrap Copy number
 variant (CNV) detecting tools into Galaxy and Bioconda.</h2>
-<p>With the availability of multiple tools for CNV detection on Galaxy,
-still, some of them are not available, so we will create documentation
-to show the process of wrapping the tools into Bioconda and then to
-Galaxy by:</p>
+<p>With the availability of only a few tools for CNV detection on
+Galaxy, still, alot of them are not available, so we will create
+documentation to show the process of wrapping the tools into Bioconda
+and then to Galaxy by:</p>
 <ol style="list-style-type: decimal">
 <li>Locate the available tutorials on how to wrap a tool into
 Bioconda</li>
 </ol>
 <ul>
 <li>This link, <a href="https://bioconda.github.io/contributor/index.html">how to
-containerise bioinformatics tool into galaxy</a>, has all the
+containerise a bioinformatics tool into Bioconda</a>, has all the
 information to contribute to Bioconda<br />
 </li>
 </ul>
@@ -397,17 +397,19 @@ to Galaxy</li>
 <ul>
 <li>Use this link, <a href="https://planemo.readthedocs.io/en/latest/writing_standalone.html">how
 to use planemo to wrap containerised bioinformatics tool into
-galaxy</a>, to use planemo to wrap a tool into galaxy<br />
+galaxy</a>, to use Planemo to wrap a tool into galaxy<br />
 </li>
-<li>If you don’t know how to git planemo use this link, <a href="https://planemo.readthedocs.io/en/latest/installation.html">how to
-install planemo</a></li>
-<li>For more information about planemo use this link, [for more
-information on planemo] (<a href="https://planemo.readthedocs.io/en/latest/" class="uri">https://planemo.readthedocs.io/en/latest/</a>).</li>
+<li>If you don’t know how to git Planemo use this link, <a href="https://planemo.readthedocs.io/en/latest/installation.html">how to
+install Planemo</a></li>
+<li>For more information about Planemo use this link, [for more
+information on Planemo] (<a href="https://planemo.readthedocs.io/en/latest/" class="uri">https://planemo.readthedocs.io/en/latest/</a>).</li>
 </ul>
 <ol start="3" style="list-style-type: decimal">
 <li>Create documentation on Galaxy using those tutorials to guide the
 user to wrap his CNV tool into Galaxy.</li>
 </ol>
+<p>After the discussion, We have agreed to wrap <a href="https://cnvkit.readthedocs.io/en/stable/">CNVkit</a> as an
+example.</p>
 </div>
 <div id="the-cnv-tools-are-different-from-each-other-in-the-outcomes-and-infrastructure-requirements." class="section level2">
 <h2>2. The CNV tools are different from each other in the outcomes and
