--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -423,8 +423,9 @@ to the user in terms of accuracy, time spent and infrastructure
 required.</p>
 <p>This can be done by:</p>
 <ol style="list-style-type: decimal">
-<li>Do a benchmark test on the available workflows in the Galaxy to
-measure the time and the CNV outcomes<br />
+<li>Do a benchmark test for the available workflows in Galaxy (until now
+there are no workflows for CNV) to measure the run time and detected
+CNV<br />
 </li>
 <li>compare them with a reference CNV test.</li>
 </ol>
