--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -423,10 +423,9 @@ to the user in terms of accuracy, time spent and infrastructure
 required.</p>
 <p>This can be done by:</p>
 <ol style="list-style-type: decimal">
-<li>Do a benchmark test for the available workflows in Galaxy (until now
-there are no workflows for CNV) to measure the run time and detected
-CNV<br />
-</li>
+<li>Do a benchmark test for the available workflows in Galaxy (We are
+orking on expanding this part) to measure the run time and detected
+CNV</li>
 <li>compare them with a reference CNV test.</li>
 </ol>
 <p>The reference CNV workflow is available in the reference article
@@ -562,6 +561,9 @@ knowledge on how to use a specific CNV tool</p></li>
 <li><p>Locate most of the CNV detecting tools available in/outside
 galaxy</p></li>
 </ol>
+<p>We have almost done creating <a href="https://github.com/kpbioteam/training-material/blob/project34/topics/variant-analysis/tutorials/somatic-variant-discovery/tutorial.md">tutorial</a>
+that uses Contol-freec to detect CNVs which also can be the backbone
+tutorial for this cause.</p>
 </div>
 </div>
 
