--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -401,8 +401,8 @@ galaxy</a>, to use Planemo to wrap a tool into galaxy<br />
 </li>
 <li>If you don’t know how to git Planemo use this link, <a href="https://planemo.readthedocs.io/en/latest/installation.html">how to
 install Planemo</a></li>
-<li>For more information about Planemo use this link, [for more
-information on Planemo] (<a href="https://planemo.readthedocs.io/en/latest/" class="uri">https://planemo.readthedocs.io/en/latest/</a>).</li>
+<li>For more information about Planemo use this link, <a href="https://planemo.readthedocs.io/en/latest/">for more information on
+Planemo</a>.</li>
 </ul>
 <ol start="3" style="list-style-type: decimal">
 <li>Create documentation on Galaxy using those tutorials to guide the
