--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -376,10 +376,9 @@ on behalf of Potworloicz team.</h1>
 <div id="create-documentation-to-guide-the-resurchers-to-wrap-copy-number-variant-cnv-detecting-tools-into-galaxy-and-bioconda." class="section level2">
 <h2>1. Create documentation to guide the resurchers to wrap Copy number
 variant (CNV) detecting tools into Galaxy and Bioconda.</h2>
-<p>With the availability of only a few tools for CNV detection on
-Galaxy, still, alot of them are not available, so we will create
-documentation to show the process of wrapping the tools into Bioconda
-and then to Galaxy by:</p>
+<p>Only a few CNV tools are available in Galaxy. So we are going to
+create documentation to show the process of wrapping the tools into
+Bioconda and then to Galaxy by:</p>
 <ol style="list-style-type: decimal">
 <li>Locate the available tutorials on how to wrap a tool into
 Bioconda</li>
