--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -380,8 +380,8 @@ variant (CNV) detecting tools into Galaxy and Bioconda.</h2>
 create documentation to show the process of wrapping the tools into
 Bioconda and then to Galaxy by:</p>
 <ol style="list-style-type: decimal">
-<li>Locate the available tutorials on how to wrap a tool into
-Bioconda</li>
+<li>Locate the available tutorials for wrapping bioinformatics tools
+into Bioconda</li>
 </ol>
 <ul>
 <li>This link, <a href="https://bioconda.github.io/contributor/index.html">how to
@@ -413,13 +413,12 @@ example.</p>
 <div id="the-cnv-tools-are-different-from-each-other-in-the-outcomes-and-infrastructure-requirements." class="section level2">
 <h2>2. The CNV tools are different from each other in the outcomes and
 infrastructure requirements.</h2>
-<p>Choosing a specific tool to carry on the analysis can be considered
-on the accuracy of CNVs detection, analysis time and the required
-infrastructure. Even though Galaxy shows the time for the analysis,
-creating a graph that compares the available CNVs workflows on Galaxy
-for the same data with each other can give an additional point of view
-to the user in terms of accuracy, time spent and infrastructure
-required.</p>
+<p>Choosing a specific tool to carry on the analysis is based on CNVs
+detection accuracy, analysis time and required infrastructure. Even
+though Galaxy shows the time for the analysis, creating a graph that
+compares the available CNVs workflows on Galaxy for the same data with
+each other can give an additional point of view to the user in terms of
+accuracy, time spent and infrastructure required.</p>
 <p>This can be done by:</p>
 <ol style="list-style-type: decimal">
 <li>Do a benchmark test for the available workflows in Galaxy (We are
@@ -540,12 +539,11 @@ exome sequencing data</p>
 </div>
 <div id="same-preprocess-different-cnv-tool-wes-tutorial." class="section level2">
 <h2>Same preprocess different CNV tool (WES) tutorial.</h2>
-<p>Usually, the CNVs workflows share the same process to prepare the
-data from the quality control to the mapping step. The changes occur in
-the CNVs detection step, so we will work to create a tutorial that
-allows the user to understand the process of the CNVs detection method
-and give him guidance on how to choose between the available CNVs tools
-to proceed with his analysis.</p>
+<p>Usually, The preprocessing steps for CNVs data (from the quality
+control to the mapping step) are the same for all CNVs tools. The
+changes occur in the CNVs detection step. We will work to create a
+tutorial that allows the user to understand the CNVs detection process
+and give guidance on how to choose between the available CNVs tools.</p>
 <p>The process to create this tutorial is by:</p>
 <ol style="list-style-type: decimal">
 <li><p>View the input requirements for some of the available CNVs
