--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -484,8 +484,8 @@ et al. (2013)</a></p>
 </tr>
 </tbody>
 </table>
-<p>Galaxy training network community [web reference] provide a
-copmprehensive <a href="https://training.galaxyproject.org/training-material/topics/dev/tutorials/tool-from-scratch/tutorial.html">tutotial</a>
+<p><a href="https://training.galaxyproject.org/">Galaxy training network
+community</a> provide a copmprehensive <a href="https://training.galaxyproject.org/training-material/topics/dev/tutorials/tool-from-scratch/tutorial.html">tutotial</a>
 to instruct the reader in the full process of integrating a tool into
 Galaxy thorugh the process of<br />
 - the creation of a bioconda recipe for a new tool - writing a Galaxy
