--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -503,13 +503,10 @@ infrastructure.</p>
 <ol style="list-style-type: decimal">
 <li><p>Do a benchmark test for the CNV detection workflow in Galaxy to
 measure the run time and detected CNV</p></li>
-<li><p>Compare them with a reference CNV test.</p></li>
+<li><p>Compare them with a (<a href="https://www.nist.gov/programs-projects/genome-bottle" class="uri">https://www.nist.gov/programs-projects/genome-bottle</a>).</p></li>
 </ol>
-<p>The reference CNV workflow is available in the reference article
-below.<br />
-<a href="https://www.nist.gov/programs-projects/genome-bottle" class="uri">https://www.nist.gov/programs-projects/genome-bottle</a></p>
-<p>The workflow and the tools/code used<br />
-<a href="https://github.com/NCBI-Hackathons/TheHumanPangenome/tree/master/MHC/e2e_notebooks" class="uri">https://github.com/NCBI-Hackathons/TheHumanPangenome/tree/master/MHC/e2e_notebooks</a></p>
+<p><a href="https://github.com/NCBI-Hackathons/TheHumanPangenome/tree/master/MHC/e2e_notebooks">The
+workflow and the tools/code used</a></p>
 </div>
 </div>
 <div id="wp4---training-and-dissemination" class="section level1">
