--- a/ElixirUK.html
+++ b/ElixirUK.html
@@ -503,7 +503,7 @@ infrastructure.</p>
 <ol style="list-style-type: decimal">
 <li><p>Do a benchmark test for the CNV detection workflow in Galaxy to
 measure the run time and detected CNV</p></li>
-<li><p>Compare them with a (<a href="https://www.nist.gov/programs-projects/genome-bottle" class="uri">https://www.nist.gov/programs-projects/genome-bottle</a>).</p></li>
+<li><p>Compare them with <a href="https://www.nist.gov/programs-projects/genome-bottle">genome-bottle</a>.</p></li>
 </ol>
 <p><a href="https://github.com/NCBI-Hackathons/TheHumanPangenome/tree/master/MHC/e2e_notebooks">The
 workflow and the tools/code used</a></p>
